# cadeng

./: .gitignore  AGENTS.md  README.md  REQUIREMENTS.md  flake.nix  package.json  tsconfig.json
client/: gallery.ts  index.html  style.css
example/: cadeng.yaml  flake.nix  pyproject.toml
example/src/: __init__.py  __main__.py  config.py  registry.py
example/src/assemblies/: __init__.py  phone_stand.py
example/src/components/: __init__.py  cube.py  cylinder.py  stand_base.py  stand_cradle.py
example/src/vitamins/: __init__.py  phone.py
example/tests/: test_dimensions.py
server/: config.ts  index.ts  python.ts  routes.ts  types.ts  watcher.ts  websocket.ts
tw3d/: Cargo.toml  IMPLEMENTATION.md  README.md
tw3d/tw3d-core/: Cargo.toml
tw3d/tw3d-core/src/: geometry.rs  lib.rs  projection.rs  stl.rs  transform.rs
tw3d/tw3d-terminal/: Cargo.toml
tw3d/tw3d-terminal/examples/: load_stl.rs
tw3d/tw3d-terminal/src/: lib.rs  main.rs  renderer.rs
tw3d/tw3d-web/: Cargo.toml
tw3d/tw3d-web/src/: lib.rs
